--- a/AppBancaEnLinea/AppBancaEnLinea/AppBancaEnLinea.csproj
+++ b/AppBancaEnLinea/AppBancaEnLinea/AppBancaEnLinea.csproj
@@ -47,4 +47,8 @@
       <Generator>MSBuild:Compile</Generator>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
 </Project>
