--- a/AppBancaEnLinea/AppBancaEnLinea/AppBancaEnLinea.csproj
+++ b/AppBancaEnLinea/AppBancaEnLinea/AppBancaEnLinea.csproj
@@ -28,7 +28,7 @@
     <EmbeddedResource Update="Views\MainPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\TestPage.xaml">
+    <EmbeddedResource Update="Views\ResumePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
@@ -50,5 +50,11 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\ResumePage.xaml.cs">
+      <DependentUpon>ResumePage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
