--- a/AppBancaEnLinea/AppBancaEnLinea/AppBancaEnLinea.csproj
+++ b/AppBancaEnLinea/AppBancaEnLinea/AppBancaEnLinea.csproj
@@ -31,6 +31,9 @@
     <EmbeddedResource Update="Views\MainPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\PagoPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\ResumePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
