--- a/AppBancaEnLinea/AppBancaEnLinea/AppBancaEnLinea.csproj
+++ b/AppBancaEnLinea/AppBancaEnLinea/AppBancaEnLinea.csproj
@@ -34,6 +34,9 @@
     <EmbeddedResource Update="Views\PagoPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\RegisterPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\ResumePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
