--- a/AppBancaEnLinea/AppBancaEnLinea.Android/AppBancaEnLinea.Android.csproj
+++ b/AppBancaEnLinea/AppBancaEnLinea.Android/AppBancaEnLinea.Android.csproj
@@ -99,13 +99,15 @@
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
-    <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AppBancaEnLinea\AppBancaEnLinea.csproj">
       <Project>{002E6102-46D7-4193-A2F8-533A4C9D795C}</Project>
       <Name>AppBancaEnLinea</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\JCH.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
