--- a/AppBancaEnLinea/AppBancaEnLinea/AppBancaEnLinea.csproj
+++ b/AppBancaEnLinea/AppBancaEnLinea/AppBancaEnLinea.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="LiveXAML" Version="2.1.72" />
     <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
     <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
