--- a/AppBancaEnLinea/AppBancaEnLinea.Android/AppBancaEnLinea.Android.csproj
+++ b/AppBancaEnLinea/AppBancaEnLinea.Android/AppBancaEnLinea.Android.csproj
@@ -109,5 +109,17 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\JCH.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\la.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\salir.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\dw.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\tt.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
